--- a/Day05PeopleBinding/Day05PeopleBinding/Day05PeopleBinding.csproj
+++ b/Day05PeopleBinding/Day05PeopleBinding/Day05PeopleBinding.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{765C24B2-A79E-4C62-A023-DB0A807E2825}</ProjectGuid>
+    <ProjectGuid>{41D3F042-6536-4199-8962-9F27AA32B613}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Day05TravelGrid</RootNamespace>
-    <AssemblyName>Day05TravelGrid</AssemblyName>
+    <RootNamespace>Day05PeopleBinding</RootNamespace>
+    <AssemblyName>Day05PeopleBinding</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -54,7 +54,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Trip.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -69,6 +68,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
